--- a/themes/forty/layouts/partials/contact.html
+++ b/themes/forty/layouts/partials/contact.html
@@ -2,7 +2,7 @@
     <section id="contact">
         <div class="inner">
             <section>
-                <form method="post" action="http://formspree.io/f/xvodlvvy/{{ .Site.Params.Contact.formEmail }}">
+                <form method="get" action="https://formspree.io/f/xvodlvvy/{{ .Site.Params.Contact.formEmail }}">
                     <div class="field half first">
                         <label for="name">Name</label>
                         <input type="text" name="name" id="name" />
